# Universidad

./: .gitignore  .vimrc  Dijkstra.txt
Algoritmos/03_analisis_ordenamiento/: prueba  results.txt  sort_functions.hxx  sort_functions.hxx.gch
Algoritmos/analisis_grafos/: Grafo.cxx  Grafo.h  Taller1.lyx  main.cxx
Algoritmos/buscaminas/: MineSweeper.py  Minesolver.py  TallerBuscaminas.lyx
Algoritmos/huffman/: huffman  huffman.lyx  huffmanDP.cxx
Algoritmos/max_sub_seq/: Taller2.lyx  main.cxx  max_subarray_algorithms.cxx  max_subarray_algorithms.h
Algoritmos/zig_zag/: maxSubPalindrome.cxx  maxZigZag.cxx  pseudocodigoPalindrome.txt  taller5y6.lyx
Bases de Datos/Taller 1/: Taller1.sql
Bases de Datos/Taller 2/: Taller2.sql
Bases de Datos/Taller 3/: Taller-3.sql
CompuMovil/: .gitignore
Desarrollo Multimedial/Blender/: AnimacionDM.blend
Desarrollo Multimedial/PixelFinder/: .project
Desarrollo Multimedial/ProyectoMultimedial/: .directory
Desarrollo Multimedial/RGBtoYCbCr/: .project
Desarrollo Multimedial/Sesiones/: Sesión 1.pptx
Desarrollo Multimedial/Taller-Gestalt/: index.html
Desarrollo Multimedial/TallerAnimacionCanvas/: index.html
Estructuras/Hanoi/: Hanoi.cxx  (+1 more)
LDP/: taller1.scm.txt
Numerico/: TallerEcuacionesFeas.ods  parcial1-1c.ods
PryEspecial/: Algoritmo.docx  Computability.docx  Ensayo 2.docx  Fundamentos Areas Claves.docx  Iniciativas Scratch.docx  Primera Propuesta ejercicios prácticos.pptx  Propuesta Ejercicios Prácticos.docx  PryEspecial.7z  Reseña Workshop.docx  TopicosClaves.docx
Vision/ejerCamara/rigidTrans/: CMakeLists.txt
(+433 files in other folders)
